# FerriteChatter

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml
ferrite_model_gen/: Cargo.toml
ferrite_model_gen/src/: lib.rs
model_gen/: Cargo.toml
model_gen/src/: lib.rs
src/: ask.rs  config.rs  core.rs  image.rs  lib.rs  main.rs  session.rs  translate.rs  web.rs
