[package]
name = "FerriteChatter"
version = "4.3.0"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2021"
description = "ChatGPT CLI"
license = "MIT"
readme = "README.md"

[[bin]]
name = "fchat"
path = "src/bin/fchat.rs"

[[bin]]
name = "fask"
path = "src/bin/fask.rs"

[[bin]]
name = "ftrans"
path = "src/bin/ftrans.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version="4.5.21", features=["derive"] }
inquire = { version="0.7.5", features=["editor"] }
openai = "1.0.0-alpha.16"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
tia = "1.0.3"
tokio = { version="1.41.1", features=["full"] }
ferrite_model_gen = "0.1.0"
