[package]
name = "FerriteChatter"
version = "7.0.1"
authors = ["n01e0 <reoshiseki@gmail.com>"]
edition = "2021"
description = "ChatGPT CLI"
license = "MIT"
readme = "README.md"

[[bin]]
name = "fchat"
path = "src/bin/fchat.rs"

[[bin]]
name = "fask"
path = "src/bin/fask.rs"

[[bin]]
name = "ftrans"
path = "src/bin/ftrans.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version="4.5.40", features=["derive"] }
inquire = { version="0.7.5", features=["editor"] }
openai = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tia = "1.0.3"
tokio = { version="1.45.1", features=["full"] }
 ferrite_model_gen = "0.3.0"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 rand = { version = "0.8", features = ["std"] }
 serde_json = "1.0"
