[package]
name = "model_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
quote = "1.0.37"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = { version = "2.0.77", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"] }

[lib]
proc-macro = true
